# gpu-descriptor

./: CHANGELOG.md  COPYING  Cargo.toml  README.md  README.tpl
.github/workflows/: badge.yml  check-platforms.yml  check-targets.yml  check-toolchains.yml  fast-pr-check.yml  lints.yml  master.yml  readme.yml
ash/: Cargo.toml
ash/src/: lib.rs
erupt/: Cargo.toml
erupt/src/: lib.rs
gfx/: Cargo.toml
gfx/src/: lib.rs
gpu-descriptor/: Cargo.toml
gpu-descriptor/src/: allocator.rs  lib.rs
license/: APACHE  MIT
src/: lib.rs
types/: Cargo.toml
types/src/: device.rs  types.rs
