[package]
name = "gpu-descriptor"
version = "0.2.4"
authors = ["Zakarum <zakarumych@ya.ru>"]
edition = "2018"
description = "Implementation agnostic descriptor allocator for Vulkan like APIs"
keywords = ["gpu", "vulkan", "no-std"]
license = "MIT OR Apache-2.0"
documentation = "https://docs.rs/gpu-descriptor"
homepage = "https://github.com/zakarumych/gpu-descriptor"
repository = "https://github.com/zakarumych/gpu-descriptor"
readme = "../README.md"

[features]
std = []
default = ["std"]

[dependencies]
gpu-descriptor-types = { path = "../types", version = "0.1" }
tracing = { version = "0.1", optional = true, default-features = false }
bitflags = { version = "2.4", default-features = false }
serde = { version = "1.0", optional = true, default-features = false, features = [
    "derive",
] }
hashbrown = { version = "0.14" }
